<resources>
    <string name="app_name">LiveScore</string>
    <string name="discover_all_about_sport">Discover all about sport</string>
    <string name="entry_description">Search millions of jobs and get the inside scoop on companies.
Wait for what? Let’s get start it!</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="what_sport_do_you_interest">What sport do \nyou interest?</string>
    <string name="u_can_choose_more">You can choose more than one</string>
    <string name="search_view_hint">Search for news, team, match, etc...</string>
    <string name="continue_">Continue</string>
    <string name="skip">Skip</string>
    <string name="soccer">Soccer</string>
    <string name="basketball">Basketball</string>
    <string name="tennis">Tennis</string>
    <string name="baseball">Baseball</string>
    <string name="football">Football</string>
    <string name="volleyball">Volleyball</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="standings">Standings</string>
    <string name="profile">My Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>