<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.entry.EntryFragment">


    <ImageView
        android:id="@+id/entry_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toTopOf="@id/entry_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/entry_image" />

    <TextView
        android:id="@+id/entry_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:text="@string/discover_all_about_sport"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/entry_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/entry_image" />

    <TextView
        android:id="@+id/entry_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/entry_description"
        android:textColor="@color/mid_grey"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/linerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/entry_title" />


    <LinearLayout
        android:id="@+id/linerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="36dp"
        android:orientation="horizontal"
        android:paddingHorizontal="40dp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/entry_desc">

        <Button
            android:id="@+id/sign_in_btn"
            style="@style/BlueButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:background="@color/background_color"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/mid_grey"
            app:backgroundTint="@null" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>